# API-Medium-Free

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  feed.xml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
templates/: dashboard.html  login.html  register.html
