[project]
name = "api-medium-free"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-cors==3.0.10",
    "flask-login==0.6.3",
    "flask-wtf==1.2.1",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "werkzeug==3.0.1",
]
